# docomatic-mcp-service

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh
.github/workflows/: tests.yml
docomatic/: __init__.py  config.py  exceptions.py  http_api.py  mcp_server.py
docomatic/mcp/: __init__.py  serializers.py  tool_handlers.py  tool_schemas.py
docomatic/migrations/: env.py
docomatic/migrations/versions/: 217b4d74ce98_initial_schema_documents_sections_links.py
docomatic/models/: __init__.py  base.py  document.py  link.py  section.py
docomatic/services/: __init__.py  document_service.py  export_service.py  link_service.py  section_service.py
docomatic/services/link/: __init__.py  reporting.py  validation.py
docomatic/services/section/: __init__.py  reordering.py  tree_operations.py  validation.py
docomatic/storage/: __init__.py  alembic.ini  database.py  repositories.py
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_document_service.py  test_link_service.py  test_mcp_server.py  test_schema.py  test_section_service.py
tests/integration/: __init__.py  test_end_to_end.py  test_github_export.py
tests/performance/: __init__.py  test_performance.py
